payload/apps/advent-wollbi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: advent-wollbi
  namespace: advent-wollbi
  labels:
    app: advent-wollbi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: advent-wollbi
  template:
    metadata:
      labels:
        app: advent-wollbi
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html-volume
              mountPath: /usr/share/nginx/html
      volumes:
        - name: html-volume
          persistentVolumeClaim:
            claimName: advent-wollbi-www
